arrumando bug d scrollbar

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     background-position: center;
     min-height: 100vh;
     background-repeat: no-repeat;
-    overflow: hidden;
+    /* overflow: hidden; */
 
 }
 
